# pv-eat

./: .gitignore  CLAUDE.MD  LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: PROPOSAL.md
experiments/: claude_api_testing.py
notebooks/: alternative_drift_sequences.py  pv_eat_poc.ipynb  test_all_strategies.py
scripts/: blackbox_drift_test.py  quick_poc.py  run_eap_study.py  run_pveat.py
src/: __init__.py
src/analysis/: __init__.py  big_five_correlation.py  phish_integration.py
src/eap/: __init__.py  eap_integration.py  live_integration.py
src/evaluation/: __init__.py  behavioral_probes.py  petri_interface.py
src/evolution/: __init__.py  fitness.py  operators.py  search.py
src/extraction/: __init__.py  persona_interface.py
